SCRUM-21: Add pagination to GET /api/pets
